# autocopier

./: .gitignore  Cargo.toml  README.md  configuration.example.json
src/: main.rs
src/configuration_reader/: mod.rs
src/file_watcher/: mod.rs  my_watcher.rs  notifications.rs
src/ui/: mod.rs
