[package]
name = "autocopier"
version = "0.1.0"
authors = ["Midas Lambrichts <midaslamb@gmail.com>"]
edition = "2018"
description = "Watches files for changes and, on file change, copies it according to some configuration."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = "2.33.0"
console = "0.9"
notify = "4.0.14"
ctrlc = "3.1.3"
chrono = "0.4"